fix: configurations for local minikube

--- a/charts/jenkins-x/jxboot-helmfile-resources/values.yaml
+++ b/charts/jenkins-x/jxboot-helmfile-resources/values.yaml
@@ -5,7 +5,7 @@ ingress:
     # such as
     #    hook: "myuniqueid.ngrok.io
     # so that webhooks from, say, github.com, will work to your local laptop
-    hook: "9e6e-222-209-83-96.ngrok.io"
+    hook: "077d-222-209-83-96.ngrok.io"
 
 kaniko:
   # lets support insecure docker registries so that we
